# University

Projects/Algorithm and data structure/A/: a1.cpp
Projects/Algorithm and data structure/B/: e4.cpp
Projects/Algorithm and data structure/C/: c.cpp
Projects/Algorithm and data structure/D/: main.cpp
Projects/Algorithm and data structure/E/: Makefile~  main.cpp
Projects/C language course/Nine Men's Morris Game/: CMakeLists.txt  GTK.c  GTK.h  MlynekGra.cbp  MlynekGra.depend  MlynekGra.layout  READ_ME.txt  dots.c  dots.h  function.c  function.h  main.c  widget.h
Projects/Computer networks/Projekt_traceroute/: Makefile  functions.cpp  functions.h  library.h  project.cpp  receive_functions.cpp  receive_functions.h  send_functions.cpp  send_functions.h
Projects/Embeded system/Line follower/: ef_1.ino
Projects/Haskell/: Checker.hs  Elzbieta.Plaszczyk.5.hs  Puzzle.hs
Projects/Prolog Project/: Elzbieta.Plaszczyk.5.pl  checker.pl  przyklady.pl  tests_5.pl
